--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kodx-calendar-plugin",
+  "name": "capacitor-calendar-plugin",
   "version": "0.0.1",
   "description": "Capacitor Calendar Plugin",
   "main": "dist/plugin.cjs.js",
@@ -13,16 +13,16 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "KodxCalendarPlugin.podspec"
+    "CapacitorCalendarPlugin.podspec"
   ],
   "author": "Kodx",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kodx/kodx-calendar-plugin.git"
+    "url": "git+https://github.com/kodx/capacitor-calendar-plugin.git"
   },
   "bugs": {
-    "url": "https://github.com/kodx/kodx-calendar-plugin/issues"
+    "url": "https://github.com/kodx/capacitor-calendar-plugin/issues"
   },
   "keywords": [
     "capacitor",
@@ -31,7 +31,7 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme KodxCalendarPlugin -destination generic/platform=iOS",
+    "verify:ios": "xcodebuild -scheme CapacitorCalendarPlugin -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
@@ -39,7 +39,7 @@
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
     "swiftlint": "node-swiftlint",
-    "docgen": "docgen --api KodxCalendarPlugin --output-readme README.md --output-json dist/docs.json",
+    "docgen": "docgen --api CapacitorCalendarPlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
